# messenger-web-app

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  tasks.ps1
.claude/: settings.local.json
client/: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  next.config.ts  package-lock.json  package.json
client/app/: page.tsx
client/messages/: en.json  uk.json
client/public/: manifest.json  sw.js
client/src/: middleware.ts  proxy.ts
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/context/: SocketContext.tsx  ThemeProvider.tsx
client/src/hooks/: eseE2E.ts  useChat.ts  useConversations.ts  useDeviceSync.ts  useE2E.ts  useFaviconBadge.ts  useFriends.ts  useMessages.ts  useOfflineQueue.ts  usePushNotifications.ts  useSearch.ts  useSignedUrl.ts  useSocket.ts  useUsers.ts  useWebRTC.ts
client/src/i18n/: request.ts
client/src/lib/: axios.ts  chatFormatters.ts  compressImage.ts  crypto.ts  cryptoDb.ts  cryptoLegacy.ts  cryptoWorkerClient.ts  deviceId.ts  deviceKeys.ts  mediaEncryption.ts  parseMetadata.ts  uploadFile.ts
client/src/store/: useAuthStore.ts
client/src/types/: auth.types.ts  chat.types.ts  compressImage.types.ts  conversation.types.ts  jsqr.d.ts
client/src/workers/: crypto.worker.ts
crypto/: Cargo.toml  README.md
crypto/.claude/: settings.local.json
crypto/core/: Cargo.toml
crypto/core/src/: device_sync.rs  double_ratchet.rs  error.rs  identity.rs  lib.rs  pin_key.rs  utils.rs  x3dh.rs
crypto/core/src/group/: distribution.rs  mod.rs  sender_key.rs
crypto/mobile/: Cargo.toml
crypto/napi/: Cargo.toml
crypto/wasm/: Cargo.toml
crypto/wasm/.claude/: settings.local.json
crypto/wasm/src/: lib.rs
docs/: ARCHITECTURE.md  DEPLOYMENT.md
server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  eslint.config.mjs  fly.toml  package-lock.json  package.json  prisma.config.ts
server/prisma/: schema.prisma
server/scripts/: audit-bundles.ts  release.sh  start.sh
server/src/: app.module.ts  main.ts
server/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts
server/src/chat/: chat.controller.ts  chat.gateway.ts  chat.module.ts  chat.service.ts  sync-session.service.ts  ws-rate-limiter.ts
server/src/common/: verify-bundle.ts
server/src/conversations/: cleanup.service.ts  conversations.controller.ts  conversations.module.ts  conversations.service.ts  metadata.validator.ts
server/src/devices/: devices.controller.ts  devices.module.ts  devices.service.ts
server/src/files/: files.controller.ts  files.module.ts
server/src/friends/: friends.controller.ts  friends.module.ts  friends.service.ts
server/src/keys/: keys.controller.ts  keys.module.ts  keys.service.ts
server/src/og/: og.controller.ts  og.module.ts  og.service.ts
server/src/prisma/: prisma.module.ts  prisma.service.ts
server/src/push/: push.controller.ts  push.module.ts  push.service.ts
server/src/reports/: reports.controller.ts  reports.module.ts  (+1 more)
(+107 files in other folders)
