[workspace]
members = ["core", "wasm", "napi", "mobile"]
resolver = "2"

[workspace.dependencies]
x25519-dalek  = { version = "2",    features = ["static_secrets", "serde"] }
ed25519-dalek = { version = "2",    features = ["serde", "rand_core"] }
aes-gcm       = { version = "0.10", features = ["getrandom"] }
hkdf          = "0.12"
sha2          = "0.10"
hmac          = "0.12"
ml-kem        = "0.2"
serde         = { version = "1",    features = ["derive"] }
zeroize       = { version = "1",    features = ["derive"] }
rand_core     = { version = "0.6",  features = ["getrandom"] }
thiserror     = "2"