[package]
name    = "messenger-crypto-core"
version = "0.1.0"
edition = "2024"

[dependencies]
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
aes-gcm      = { workspace = true }
hkdf         = { workspace = true }
sha2         = { workspace = true }
hmac         = { workspace = true }
ml-kem       = { workspace = true }
serde        = { workspace = true }
zeroize      = { workspace = true }
rand_core    = { workspace = true }
argon2       = { workspace = true }
thiserror    = { workspace = true }

[dev-dependencies]
proptest = "1"